# equipo1_teleoperacion_xarm_lite6

./: README.md
install/: local_setup.sh  setup.sh
install/ws_master_bridge/lib/ws_master_bridge/: master_ws_bridge  test_traj_pub
install/ws_master_bridge/share/ws_master_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/ws_master_bridge/: package.xml  setup.cfg  setup.py
src/ws_master_bridge/ws_master_bridge/: master_ws_bridge.py  test_traj_pub.py
src/ws_master_bridge/xarm_teleop/: package.xml  setup.cfg  setup.py
src/ws_master_bridge/xarm_teleop/launch/: launch_A.py  launch_B.py
src/ws_master_bridge/xarm_teleop/xarm_teleop/: master_node.py  slave_node.py  udp_bridge_A.py  udp_bridge_B.py
src/ws_master_bridge/xarm_teleop/xarm_teleop/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tools/: fake_slave_server.py
