<?xml version="1.0"?>
<package format="3">
  <name>xarm_teleop</name>
  <version>0.1.0</version>
  <description>xArm bilateral teleop test — button-triggered circle trajectory</description>
  <maintainer email="student@tec.mx">TE3001B</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
</package>
